--- a/activities/index.html
+++ b/activities/index.html
@@ -14,30 +14,27 @@
 
 <body class="container">
 
-    <table style="width:80%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-        <tbody>
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                    <p style="text-align:left">
-                      <a href='../index.html'>Home</a> &nbsp|&nbsp
-                      <a href='../awards/index.html'>Awards</a> &nbsp|&nbsp
-                      <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
-                      <a href='../funding/index.html'>Funding</a> &nbsp|&nbsp
-                      <a href='../members/index.html'>Members</a> &nbsp|&nbsp
-                      <a href='../news-journal/index.html'>NewsLog</a> &nbsp|&nbsp
-                      <a href='../patents/index.html'>Patents</a> &nbsp|&nbsp
-                      <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
-                      <a href='../publications/index.html'>Publications</a>
-                    </p>
-                </td>
-            </tr>
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
+    <!-- Navigation -->
+    <div class="nav-container">
+      <p>
+        <a href='../index.html'>Home</a> &nbsp;|&nbsp;
+        <a href='../awards/index.html'>Awards</a> &nbsp;|&nbsp;
+        <a href='../demos/index.html'>Demos</a> &nbsp;|&nbsp;
+        <a href='../funding/index.html'>Funding</a> &nbsp;|&nbsp;
+        <a href='../members/index.html'>Members</a> &nbsp;|&nbsp;
+        <a href='../news-journal/index.html'>NewsLog</a> &nbsp;|&nbsp;
+        <a href='../patents/index.html'>Patents</a> &nbsp;|&nbsp;
+        <a href='../projects/index.html'>Projects</a> &nbsp;|&nbsp;
+        <a href='../publications/index.html'>Publications</a>
+      </p>
+    </div>
 
-                <heading>Activities</heading>
-                <hr style="width: 100%; float: left;">
-                <tr style="padding:0px">
-                    <td style="padding:2.5%;width:67%;vertical-align:top">
+    <div class="page-header">
+      <heading>Activities</heading>
+      <hr style="width: 100%; float: left;">
+    </div>
+
+    <div class="page-content">
                       <div class="activities">
                         
                         <!-- Empty Constructors for future use
@@ -355,30 +352,16 @@
                             </p>
                           </div>
                         </div>
-                      </div>                      
-                    </td>
-            </tr>
+                      </div>
+    </div>
 
-
-
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                    <hr style="width: 100%; float: left;">
-                </td>
-            </tr>
-
-
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                  <p style="text-align:left">
-                    
-                    <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp|&nbsp
-                    <a target="_blank" href="https://maps.app.goo.gl/ZFgJm82yYJhoknvZA">Address</a>
-                  </p>
-                </td>
-              </tr>
-        </tbody>
-    </table>
+    <div class="footer-section">
+      <hr style="width: 100%; float: left;">
+      <p style="text-align:left">
+        <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp;|&nbsp;
+        <a target="_blank" href="https://maps.app.goo.gl/ZFgJm82yYJhoknvZA">Address</a>
+      </p>
+    </div>
 
 </body>
 
