--- a/demos/index.html
+++ b/demos/index.html
@@ -29,12 +29,12 @@
     </p>
   </div>
 
-  <div>
+  <div class="page-header">
     <heading>Demonstrations</heading>
     <hr style="width: 100%; float: left" />
   </div>
 
-  <div id="screen" class="container">
+  <div id="screen" class="page-content">
     <section id="portfolio" class="portfolio">
       <div style="margin: 0 auto" class="container">
         <br />
