--- a/members/index.html
+++ b/members/index.html
@@ -31,12 +31,12 @@
         </p>
     </div>
 
-    <div class="container">
+    <div class="page-header">
         <heading>Members</heading>
         <hr style="width: 100%; float: left;">
     </div>
 
-    <div class="section-wrapper">
+    <div class="page-content section-wrapper">
         <div>
             <h2>Faculty</h2>
             <div class="grid">
@@ -333,21 +333,15 @@
         </div>
 
         <!-- END SECTION -->
+    </div>
 
-        <div>
-            <hr style="width: 100%; float: left;">
-        </div>
-
-        <div class="section-wrapper">
-            <div>
-                <p style="text-align:left">
-
-                    <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp;|&nbsp;
-                    <a target="_blank" href="https://maps.app.goo.gl/ZFgJm82yYJhoknvZA">Address</a>
-                </p>
-            </div>
-        </div>
-        <!-- Table removed -->
+    <div class="footer-section">
+        <hr style="width: 100%; float: left;">
+        <p style="text-align:left">
+            <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp;|&nbsp;
+            <a target="_blank" href="https://maps.app.goo.gl/ZFgJm82yYJhoknvZA">Address</a>
+        </p>
+    </div>
 
 </body>
 
