--- a/patents/index.html
+++ b/patents/index.html
@@ -32,12 +32,12 @@
         </p>
     </div>
 
-    <div class="container">
+    <div class="page-header">
         <heading>Patents</heading>
         <hr style="width: 100%; float: left;">
     </div>
 
-    <div style="padding: 2.5%;">
+    <div class="page-content">
 
         <!-- As Principal Investigator (PI) -->
         <h3>Internal Collaborations</h3>
@@ -132,7 +132,7 @@
         </ul>
     </div>
 
-    <div class="container">
+    <div class="footer-section">
         <hr style="width: 100%; float: left;">
         <p style="text-align:left">
             <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp;|&nbsp;
