--- a/publications/index.html
+++ b/publications/index.html
@@ -15,27 +15,26 @@
 
 <body class="container">
 
-    <table style="width:80%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-        <tbody>
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                    <p style="text-align:left">
-                        <a href='../index.html'>Home</a> &nbsp|&nbsp
-                        <a href='../activities/index.html'>Activities</a> &nbsp|&nbsp
-                        <a href='../awards/index.html'>Awards</a> &nbsp|&nbsp
-                        <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
-                        <a href='../funding/index.html'>Funding</a> &nbsp|&nbsp
-                        <a href='../members/index.html'>Members</a> &nbsp|&nbsp
-                        <a href='../news-journal/index.html'>NewsLog</a> &nbsp|&nbsp
-                        <a href='../patents/index.html'>Patents</a> &nbsp|&nbsp
-                        <a href='../projects/index.html'>Projects</a>
-                    </p>
-                </td>
-            </tr>
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
+    <!-- Navigation -->
+    <div class="nav-container">
+      <p>
+        <a href='../index.html'>Home</a> &nbsp;|&nbsp;
+        <a href='../activities/index.html'>Activities</a> &nbsp;|&nbsp;
+        <a href='../awards/index.html'>Awards</a> &nbsp;|&nbsp;
+        <a href='../demos/index.html'>Demos</a> &nbsp;|&nbsp;
+        <a href='../funding/index.html'>Funding</a> &nbsp;|&nbsp;
+        <a href='../members/index.html'>Members</a> &nbsp;|&nbsp;
+        <a href='../news-journal/index.html'>NewsLog</a> &nbsp;|&nbsp;
+        <a href='../patents/index.html'>Patents</a> &nbsp;|&nbsp;
+        <a href='../projects/index.html'>Projects</a>
+      </p>
+    </div>
 
-                    <heading>Publications</heading>
+    <div class="page-header">
+      <heading>Publications</heading>
+    </div>
+
+    <div class="page-content">
 
                     <div class="legend">
                         <div class="legend-item">
@@ -916,26 +915,15 @@
                         <!-- Repeat for each year -->
                     </section>
 
-                </td>
-            </tr>
+    </div>
 
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                    <hr style="width: 100%; float: left;">
-                </td>
-            </tr>
-
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                    <p style="text-align:left">
-
-                        <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp|&nbsp
-                        <a target="_blank" href="https://maps.app.goo.gl/ZFgJm82yYJhoknvZA">Address</a>
-                    </p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="footer-section">
+      <hr style="width: 100%; float: left;">
+      <p style="text-align:left">
+        <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp;|&nbsp;
+        <a target="_blank" href="https://maps.app.goo.gl/ZFgJm82yYJhoknvZA">Address</a>
+      </p>
+    </div>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // Function to filter papers by tag
