--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -32,12 +32,12 @@
     </p>
   </div>
 
-  <div class="container">
+  <div class="page-header">
     <heading>NewsLog</heading>
     <hr style="width: 100%; float: left;">
   </div>
 
-  <div style="padding: 2.5%;">
+  <div class="page-content">
     <div class="newsjournal">
       <!-- newsjournal item -->
 
@@ -741,7 +741,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="footer-section">
     <hr style="width: 100%; float: left;">
     <p style="text-align:left">
       <a target="_blank" href="https://github.com/ai4society">GitHub</a>&nbsp;|&nbsp;
