update Website consistency

--- a/awards/index.html
+++ b/awards/index.html
@@ -109,6 +109,7 @@
       <p>
         <a href='../index.html'>Home</a> &nbsp;|&nbsp;
         <a href='../activities/index.html'>Activities</a> &nbsp;|&nbsp;
+        <a href='../awards/index.html' class='nav-active'>Awards</a> &nbsp;|&nbsp;
         <a href='../demos/index.html'>Demos</a> &nbsp;|&nbsp;
         <a href='../funding/index.html'>Funding</a> &nbsp;|&nbsp;
         <a href='../members/index.html'>Members</a> &nbsp;|&nbsp;
