--- a/funding/index.html
+++ b/funding/index.html
@@ -23,6 +23,7 @@
         <a href='../activities/index.html'>Activities</a> &nbsp;|&nbsp;
         <a href='../awards/index.html'>Awards</a> &nbsp;|&nbsp;
         <a href='../demos/index.html'>Demos</a> &nbsp;|&nbsp;
+        <a href='../funding/index.html' class='nav-active'>Funding</a> &nbsp;|&nbsp;
         <a href='../members/index.html'>Members</a> &nbsp;|&nbsp;
         <a href='../news-journal/index.html'>NewsLog</a> &nbsp;|&nbsp;
         <a href='../patents/index.html'>Patents</a> &nbsp;|&nbsp;
