--- a/activities/index.html
+++ b/activities/index.html
@@ -18,6 +18,7 @@
     <div class="nav-container">
       <p>
         <a href='../index.html'>Home</a> &nbsp;|&nbsp;
+        <a href='../activities/index.html' class='nav-active'>Activities</a> &nbsp;|&nbsp;
         <a href='../awards/index.html'>Awards</a> &nbsp;|&nbsp;
         <a href='../demos/index.html'>Demos</a> &nbsp;|&nbsp;
         <a href='../funding/index.html'>Funding</a> &nbsp;|&nbsp;
