--- a/demos/index.html
+++ b/demos/index.html
@@ -20,6 +20,7 @@
       <a href="../index.html">Home</a> &nbsp;|&nbsp;
       <a href="../activities/index.html">Activities</a> &nbsp;|&nbsp;
       <a href="../awards/index.html">Awards</a> &nbsp;|&nbsp;
+      <a href="../demos/index.html" class="nav-active">Demos</a> &nbsp;|&nbsp;
       <a href="../funding/index.html">Funding</a> &nbsp;|&nbsp;
       <a href="../members/index.html">Members</a> &nbsp;|&nbsp;
       <a href="../news-journal/index.html">NewsLog</a> &nbsp;|&nbsp;
