--- a/members/index.html
+++ b/members/index.html
@@ -23,7 +23,7 @@
             <a href="../awards/index.html">Awards</a> &nbsp;|&nbsp;
             <a href="../demos/index.html">Demos</a> &nbsp;|&nbsp;
             <a href="../funding/index.html">Funding</a> &nbsp;|&nbsp;
-            <a href="../members/index.html">Members</a> &nbsp;|&nbsp;
+            <a href="../members/index.html" class="nav-active">Members</a> &nbsp;|&nbsp;
             <a href="../news-journal/index.html">NewsLog</a> &nbsp;|&nbsp;
             <a href="../patents/index.html">Patents</a> &nbsp;|&nbsp;
             <a href="../projects/index.html">Projects</a> &nbsp;|&nbsp;
