--- a/publications/index.html
+++ b/publications/index.html
@@ -26,7 +26,8 @@
         <a href='../members/index.html'>Members</a> &nbsp;|&nbsp;
         <a href='../news-journal/index.html'>NewsLog</a> &nbsp;|&nbsp;
         <a href='../patents/index.html'>Patents</a> &nbsp;|&nbsp;
-        <a href='../projects/index.html'>Projects</a>
+        <a href='../projects/index.html'>Projects</a> &nbsp;|&nbsp;
+        <a href='../publications/index.html' class='nav-active'>Publications</a>
       </p>
     </div>
 
