--- a/index.html
+++ b/index.html
@@ -137,17 +137,17 @@
                 <a href="publications/papers_local/chatsparent_aaai_demo.pdf" target="_blank"><b>Chatsparent: An
                     Interactive System for Detecting and Mitigating
                     Cognitive Fatigue in LLMs</b></a> (Demo)
-                <br><span class="booth-highlight">Jan 23 - Booth 5 (Hall 2)</span>
+                <br><span class="booth-highlight">Jan 23, Friday - Booth 5 (Hall 2)</span>
               </li>
               <li>
                 <a href="https://arxiv.org/abs/2508.16753" target="_blank"><b>GAICo: Demonstrating a Unified
                     Framework for Multi-Modal GenAI Evaluation</b></a> (Demo)
-                <br><span class="booth-highlight">Jan 23 Friday - Booth 12 (Hall 3)</span>
+                <br><span class="booth-highlight">Jan 23, Friday - Booth 12 (Hall 3)</span>
               </li>
               <li>
                 <a href="publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf" target="_blank"><b>OMEGA:
                     An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</b></a> (Demo)
-                <br><span class="booth-highlight">Saturday, Jan 24 - Booth 6 (Hall 2)</span>
+                <br><span class="booth-highlight">Jan 24, Saturday - Booth 6 (Hall 2)</span>
               </li>
             </ul>
           </div>
