--- a/members/index.html
+++ b/members/index.html
@@ -79,6 +79,9 @@
 
                         <a target="_blank" href="mailto:kausik@email.sc.edu">kausik@email.sc.edu</a>
                         <br>
+                        <a target="_blank" href="https://kausik-l.github.io/pages/dissertation.html">Dissertation -
+                            Rating AI Models for Robustness through a Causal Lens    </a>
+                        <br>
                         Research Interests:
                         <span class="tag tag-method">Data Analysis</span>,
                         <span class="tag tag-method">Trust Rating</span>
@@ -126,6 +129,9 @@
                         <span class="tag tag-domain">Elections</span>
                         <br><br>
                     </figcaption>
+
+
+                    
 
                     <!-- Commented
                         <img src="images_members/rushil.jpg">
