added arc demo entry

--- a/demos/index.html
+++ b/demos/index.html
@@ -42,6 +42,39 @@
 
         <div class="demo-row">
           <div class="demo-media">
+            <iframe width="300" height="200"
+              src="https://drive.google.com/file/d/1SrI7jJH0vU4s7CTjdqzotGkKjYycio4s/preview"
+              title="ARC: A Tool to Rate AI Models for Robustness Through a Causal Lens for Enabling Trustworthy Model Selection" alt="ARC Tool Demo" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+          <div class="demo-text">
+            <h3 class="card-text">
+              ARC: A Tool to Rate AI Models for Robustness Through a Causal Lens for Enabling Trustworthy Model Selection | ACM Web Conference 2026
+              <span class="tag tag-method">Trusted AI</span>
+            </h3>
+            <p>
+              AI models are widely used in web applications and data-driven services that rely on continuously collected and evolving online data. 
+              Their decisions can be affected by bias, noise, and shifts in the underlying data. 
+              This paper presents ARC, an interactive web-based tool for rating AI models for robustness using causality-based methods. 
+              ARC quantifies robustness, encompassing fairness and stability, through causal metrics that measure how predictions vary 
+              with perturbations and protected attributes, and allows users to explore trade-offs between robustness and accuracy. 
+              The tool is model-agnostic and task-independent: users can upload their own datasets or select from four supported 
+              domains including binary classification, sentiment analysis, group recommendation, and time-series forecasting, 
+              and evaluate multiple models under a shared causal setup. ARC helps developers assess models trained or deployed on 
+              web data and supports informed model selection.
+            </p>
+            <a href="https://drive.google.com/file/d/1SrI7jJH0vU4s7CTjdqzotGkKjYycio4s/view" target="_blank">[Demo Video]</a>
+            <a href="http://casy.cse.sc.edu/causal_rating" target="_blank" rel="noopener noreferrer">[Tool]</a>
+            <!-- <a href="../projects/rating_page/bib/rose_tool.txt" target="_blank" type="text/plain">[BibTex]</a> -->
+            <!-- <a href="../projects/teaming/index.html" target="_blank" type="text/plain">[More Details]</a> -->
+            <br />
+            <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
+          </div>
+        </div>
+
+        <div class="demo-row">
+          <div class="demo-media">
             <a href="https://drive.google.com/file/d/1FJ-Qm154FZXwJw94spUKh3PO3YzoqkcB/view" target="_blank"
               rel="noopener noreferrer">
               <img src="./images/omega-AAAI-26.png" alt="OMEGA MAPF Ontology Demo"
@@ -249,40 +282,7 @@
         <br />
         <br />
 
-        <div class="demo-row">
-          <div class="demo-media">
-            <iframe width="300" height="200"
-              src="https://drive.google.com/file/d/1SN0-gelnUFwMfAdZr0tTV6rtbBkCQH9q/preview"
-              title="ARC: A Tool to Rate AI Systems for Bias Through a Causal Lens" alt="ARC Tool Demo" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
-          <div class="demo-text">
-            <h3 class="card-text">
-              ARC: A Tool to Rate AI Systems for Bias Through a Causal Lens | 2024
-              <span class="tag tag-method">Trusted AI</span>
-            </h3>
-            <p>
-              As Artificial Intelligence (AI) systems become more powerful, concerns about trust
-              issues like bias limit their adoption. Bias often arises with respect to protected
-              attributes such as gender, race, and age. We present ARC, an extensible tool that
-              rates AI models through a causal lens, covering bias, robustness to perturbations,
-              and accuracy. ARC assists developers in improving models and helps end-users make
-              informed choices. It currently supports four tasks: binary classification, sentiment
-              analysis, group recommendation, and time-series forecasting, and allows users to
-              evaluate models on custom datasets. The rating method is model-independent and
-              causally interpretable.
-            </p>
-            <!-- <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/358475224_ROSE_Tool_and_Data_ResOurces_to_Explore_the_Instability_of_SEntiment_Analysis_Systems/links/6203f8d0c83d2b75dffd6ecc/ROSE-Tool-and-Data-ResOurces-to-Explore-the-Instability-of-SEntiment-Analysis-Systems.pdf"
-            target="_blank" rel="noopener noreferrer">[Paper]</a> -->
-            <a href="https://tinyurl.com/bd3cxhrb" target="_blank">[Demo Video]</a>
-            <a href="http://casy.cse.sc.edu/causal_rating" target="_blank" rel="noopener noreferrer">[Tool]</a>
-            <!-- <a href="../projects/rating_page/bib/rose_tool.txt" target="_blank" type="text/plain">[BibTex]</a> -->
-            <!-- <a href="../projects/teaming/index.html" target="_blank" type="text/plain">[More Details]</a> -->
-            <br />
-            <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
-          </div>
-        </div>
+
 
         <div class="demo-row">
           <div class="demo-media">
