publication update with ARC demo

--- a/publications/index.html
+++ b/publications/index.html
@@ -89,6 +89,17 @@
                         <h2>2026</h2>
                         <ul class="papers-list">
 
+                            <li><b>ARC: A Tool to Rate AI Models for Robustness Through a Causal Lens for Enabling Trustworthy Model Selection</b><br>
+                            <i>The ACM Web Conference, Dubai, United Arab Emirates, April 2026</i><br>
+                            Kausik Lakkaraju, Siva Likitha Valluru, Biplav Srivastava, Marco Valtorta
+                            <br>
+                            <a href='./papers_local/ARC_Demo_WebConference2026.pdf' target="_blank">[Paper]</a>
+                            <a href='https://drive.google.com/file/d/1SrI7jJH0vU4s7CTjdqzotGkKjYycio4s/view' target="_blank">[Video]</a>
+                            <span class="tag tag-type">Demo</span>
+                            <span class="tag tag-method">Trust Rating</span>
+                            <br>
+                            </li>
+
 
                             <li><b> GAICo: A Deployed and Extensible Framework for Evaluating Diverse
                                     and Multimodal Generative AI Outputs </b><br>
