--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -84,12 +84,12 @@
               <b>Quick Start</b>
             </p>
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
-              <li>See our latest work on BEACON <a href="http://3.144.8.247/">[demo]</a>, a personalized meal planning system
+              <li>See our latest work on BEACON <a href="http://3.144.8.247/" target="_blank">[demo]</a>, a personalized meal planning system
                 to assist with making optimized meal choices over a time period, incorporating various food
                 restrictions, chronic health conditions, regional cuisine preferences, as well as balancing short- and
                 long-term constraints to promote individual health and happines <a
                   href="https://arxiv.org/abs/2412.17910" target="_blank">[Paper]</a> <a
-                  href="https://github.com/SCCapstone/beacon-of-hope">[Github(capstone project)]</a></li>
+                  href="https://github.com/SCCapstone/beacon-of-hope" target="_blank">[Github(capstone project)]</a></li>
 
               <li><img id="myImg0" src="images/ultra_award.jpeg"
                   alt="🎉 2024 AAAI-IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
