--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -89,7 +89,7 @@
                 restrictions, chronic health conditions, regional cuisine preferences, as well as balancing short- and
                 long-term constraints to promote individual health and happines <a
                   href="https://arxiv.org/abs/2412.17910" target="_blank">[Paper]</a> <a
-                  href="https://github.com/SCCapstone/beacon-of-hope" target="_blank">[Github(capstone project)]</a></li>
+                  href="https://github.com/SCCapstone/beacon-of-hope" target="_blank">[Github - capstone prototype]</a></li>
 
               <li><img id="myImg0" src="images/ultra_award.jpeg"
                   alt="🎉 2024 AAAI-IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
