Change text formatting for conference presentation links

--- a/index.html
+++ b/index.html
@@ -129,24 +129,29 @@
             </p>
             <ul>
               <li>
-                <a href="https://arxiv.org/abs/2508.16753" target="_blank"><b>GAICo: A Deployed and
-                    Extensible Framework for Evaluating Diverse and Multimodal Generative AI Outputs</b></a>
+                <a href="https://arxiv.org/abs/2508.16753" target="_blank"><i>GAICo: A Deployed and
+                    Extensible Framework for Evaluating Diverse and Multimodal Generative AI Outputs</i></a>
                 (IAAI/AAAI-26)
               </li>
+              
+              
               <li>
-                <a href="publications/papers_local/chatsparent_aaai_demo.pdf" target="_blank"><b>Chatsparent: An
-                    Interactive System for Detecting and Mitigating
-                    Cognitive Fatigue in LLMs</b></a> (Demo)
-                <br><span class="booth-highlight">Jan 23, Friday - Booth 5 (Hall 2)</span>
-              </li>
-              <li>
-                <a href="https://arxiv.org/abs/2508.16753" target="_blank"><b>GAICo: Demonstrating a Unified
-                    Framework for Multi-Modal GenAI Evaluation</b></a> (Demo)
+                <a href="https://arxiv.org/abs/2508.16753" target="_blank"><i>GAICo: Demonstrating a Unified
+                    Framework for Multi-Modal GenAI Evaluation</i></a> (Demo)
                 <br><span class="booth-highlight">Jan 23, Friday - Booth 12 (Hall 3)</span>
               </li>
-              <li>
-                <a href="publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf" target="_blank"><b>OMEGA:
-                    An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</b></a> (Demo)
+
+
+               <li>
+                <a href="publications/papers_local/chatsparent_aaai_demo.pdf" target="_blank"><i>Chatsparent: An
+                    Interactive System for Detecting and Mitigating
+                    Cognitive Fatigue in LLMs</i></a> (Demo)
+                <br><span class="booth-highlight">Jan 23, Friday - Booth 5 (Hall 2)</span>
+              </li>
+
+               <li>
+                <a href="publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf" target="_blank"><i>OMEGA:
+                    An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</i></a> (Demo)
                 <br><span class="booth-highlight">Jan 24, Saturday - Booth 6 (Hall 2)</span>
               </li>
             </ul>
