Add January 2026 timeline item for ACM Web Conference
Added a new timeline item for January 2026 with details about a demo paper accepted at the ACM Web Conference.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
               on Feb 04.
             </p>
           </div>
+          
         </div>
         <!-- End of February 2026 -->
 
@@ -123,6 +124,12 @@
           <div class="timeline-dot"></div>
           <div class="timeline-date month">January</div>
 
+            <div class="timeline-content">
+            <p> A demo paper accepted at the ACM Web Conference 2026 on AAAI 2026 on 
+                <a href='./papers_local/ARC_Demo_WebConference2026.pdf' target="_blank">ARC: A Tool to Rate AI Models</a>.   
+            </p>
+          </div>
+          
           <div class="timeline-content">
             <p>
               Our group will be attending AAAI-26 to present the following works:
