update research spotlight

--- a/index.html
+++ b/index.html
@@ -331,13 +331,10 @@
             <div class="poster-carousel-container" id="posterCarouselContainer">
               <div class="poster-carousel-wrapper">
                 <div class="poster-slide active" data-poster-url="spotlight/omega_poster_AAAI-2026.png" data-caption="OMEGA - AAAI 2026">
-                  <img src="spotlight/omega_poster_AAAI-2026.png" alt="OMEGA Poster AAAI 2026" class="poster-carousel-img" />
+                  <img src="spotlight/omega_poster_AAAI-2026.png" alt="OMEGA - AAAI 2026" class="poster-carousel-img" />
                 </div>
-                <div class="poster-slide" data-poster-url="spotlight/AAAI-24_Demo_Poster.png" data-caption="Demo - AAAI 2024">
-                  <img src="spotlight/AAAI-24_Demo_Poster.png" alt="AAAI 24 Demo Poster" class="poster-carousel-img" />
-                </div>
-                <div class="poster-slide" data-poster-url="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" data-caption="ULTRA - IAAI/AAAI 2024">
-                  <img src="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" alt="ULTRA Poster AAAI 2024" class="poster-carousel-img" />
+                <div class="poster-slide" data-poster-url="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" data-caption="ULTRA - AAAI 2024">
+                  <img src="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" alt="ULTRA - AAAI 2024" class="poster-carousel-img" />
                 </div>
               </div>
 
@@ -465,30 +462,30 @@
         <div class="poster-popup-grid">
           <!-- AAAI 2026 -->
           <a href="projects/ontology/files/omega_poster_AAAI-2026.pdf" target="_blank" class="poster-popup-item">
-            <img src="spotlight/omega_poster_AAAI-2026.png" alt="OMEGA Poster" class="poster-popup-thumbnail" />
+            <img src="spotlight/omega_poster_AAAI-2026.png" alt="OMEGA - AAAI 2026" class="poster-popup-thumbnail" />
             <div class="poster-popup-caption">OMEGA - AAAI 2026</div>
+          </a>
+
+          <!-- NeurIPS 2025 -->
+          <a href="spotlight/NeurIPS-24-Poster.png" target="_blank" class="poster-popup-item">
+            <img src="spotlight/NeurIPS-24-Poster.png" alt="MisInfo - NeurIPS 2025" class="poster-popup-thumbnail" />
+            <div class="poster-popup-caption">MisInfo - NeurIPS 2025</div>
           </a>
 
           <!-- AAAI 2024 -->
           <a href="publications/papers_local/AAAI-24_Demo_Poster.pdf" target="_blank" class="poster-popup-item">
-            <img src="spotlight/AAAI-24_Demo_Poster.png" alt="AAAI 24 Demo" class="poster-popup-thumbnail" />
-            <div class="poster-popup-caption">Demo - AAAI 2024</div>
+            <img src="spotlight/AAAI-24_Demo_Poster.png" alt="InfoSpread Demo - AAAI 2024" class="poster-popup-thumbnail" />
+            <div class="poster-popup-caption">InfoSpread Demo - AAAI 2024</div>
           </a>
 
           <a href="publications/papers_local/AAAI-IAAI-2024-ULTRA-Poster.pdf" target="_blank" class="poster-popup-item">
-            <img src="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" alt="ULTRA Poster" class="poster-popup-thumbnail" />
-            <div class="poster-popup-caption">ULTRA - IAAI/AAAI 2024</div>
-          </a>
-
-          <!-- NeurIPS 2024 -->
-          <a href="spotlight/NeurIPS-24-Poster.png" target="_blank" class="poster-popup-item">
-            <img src="spotlight/NeurIPS-24-Poster.png" alt="NeurIPS 2024" class="poster-popup-thumbnail" />
-            <div class="poster-popup-caption">NeurIPS 2024</div>
+            <img src="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" alt="ULTRA - AAAI 2024" class="poster-popup-thumbnail" />
+            <div class="poster-popup-caption">ULTRA - AAAI 2024</div>
           </a>
 
           <!-- IAAI 2023 -->
           <a href="spotlight/power-IAAI.jpg" target="_blank" class="poster-popup-item">
-            <img src="spotlight/power-IAAI.jpg" alt="PowerIoT IAAI" class="poster-popup-thumbnail" />
+            <img src="spotlight/power-IAAI.jpg" alt="PowerIoT - IAAI 2023" class="poster-popup-thumbnail" />
             <div class="poster-popup-caption">PowerIoT - IAAI 2023</div>
           </a>
         </div>
